--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -26,6 +26,7 @@
 							<tr>
 								<th>Nome</th>
 								<th>Email</th>
+								<th>Telefone</th>
 								<th>Editar</th>
 								<th>Apagar</th>
 							</tr>
